# anyparser

./: .env-sample  .geminiignore  .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt
.gemini/skills/mineru-md-enhancer/: SKILL.md
.gemini/skills/mineru-md-enhancer/references/: template.py
.gemini/skills/python-chunker-architect/: SKILL.md
.gemini/skills/python-chunker-architect/references/: golden_template.py  template.py
.gemini/skills/python-chunker-architect/scripts/: requirements.txt
app/: main.py  mcp_main.py
app/api/v1/: parse.py  process.py  system.py
app/core/: config.py
app/services/: __init__.py  chunking_service.py  enrichment_service.py  llm_client.py  mineru_client.py  vlm_client.py  vlm_enrichment_service.py
app/utils/: archive.py  file_handler.py  markdown_parser.py
docker/: Dockerfile  docker-compose.yaml
docs/: prompt.md
scripts/: verify_chunking.py
tests/: conftest.py  input.json  response.json  test_api.py  test_chunking_metadata.py  test_enrichment.py  test_mcp_client.py  test_mcp_full_integration.py  test_md_chunk.py  test_merging.py  test_mineru.py  test_parser.py  test_utils.py
tests/data/: hammerspace.md  input.json  test.md
