[project]
name = "anyparser"
version = "0.1.0"
description = "FastAPI service for MinerU PDF parsing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "loguru>=0.7.3",
    "mineru>=2.7.6",
    "mineru-vl-utils>=0.1.22",
    "python-multipart>=0.0.22",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.6",
    "python-dotenv>=1.2.2",
    "aiofiles>=25.1.0",
    "pypdf>=6.7.5",
    "pypdfium2>=4.30.0",
    "reportlab>=4.4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
